# air_dynamics

./: .gitmodules  CMakeLists.txt  package.xml
include/air_dynamics/: air_dynamics.h  dryden_model.h
src/: air_dynamics.cpp  air_dynamics_node.cpp
