<?xml version="1.0"?>
<package format="2">
  <name>air_dynamics</name>
  <version>0.0.0</version>
  <description>The air_dynamics package</description>

  <maintainer email="andrew@todo.todo">andrew</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>eigen3</depend>
  <depend>rosflight_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
